# papyrus.ai

./: .gitignore  .pre-commit-config.yaml  CODING_STYLE.md  PRE_COMMIT_SETUP.md  README.md  SETUP.md  dev-fixed.sh  dev.sh  docker-compose.prod.yml  docker-compose.yaml  pyproject.toml  test.py
backend/: .dockerignore  .env.example  Dockerfile  config.py  database.py  main.py  requirements.txt  vector_db.py
backend/src/: database.py  main.py
backend/src/api/v1/: auth.py  chat.py  documents.py  files.py  protected.py
backend/src/api/v1/docs/: auth_docs.py  files_docs.py
backend/src/core/: config.py  dependencies.py
backend/src/models/: __init__.py  document.py  user.py
backend/src/schemas/: auth.py  file.py
backend/src/services/: auth_service.py  document_service.py  pdf_processor.py  storage_service.py  vectordb_service.py
backend/tests/: conftest.py
backend/tests/factories/: __init__.py  auth_factories.py  paper_factories.py
backend/tests/unit/: test_auth_endpoints.py  test_auth_models.py  test_auth_schemas.py  test_auth_service.py  test_models.py
frontend/: .dockerignore  .npmrc  Dockerfile  README.md  next.config.js  next.config.mjs  package-lock.json  package.json
frontend/src/app/: layout.tsx  page.tsx
frontend/src/components/: Breadcrumb.jsx  Button.jsx  Navbar.jsx
frontend/src/components/modal/: AddFolderModal.jsx  UploadPDFModal.jsx
frontend/src/components/ui/: button.jsx
frontend/src/data/: mock.js
frontend/src/lib/: auth.js
frontend/src/pages/: 404.js  _app.js  index.js  login.js  pricing.js
frontend/src/pages/libraries/: index.js
frontend/src/pages/libraries/[folderId]/: ai-chat.js  index.js
frontend/src/styles/: AIChat.module.css  AddFolderModal.module.css  Breadcrumb.module.css  Button.module.css  Folder.module.css  Home.module.css  Libraries.module.css  Login.module.css  Navbar.module.css  Pricing.module.css  UploadModal.module.css  error.module.css  globals.css
